第2回課題修正

--- a/kadai2_hasegawa_01/index.html
+++ b/kadai2_hasegawa_01/index.html
@@ -37,7 +37,7 @@
                 <li>講師一覧</li>
                 <li>料金プラン</li>
                 <li>会社概要</li>
-                <li class="r">お問い合せ</li>
+                <li>お問い合せ</li>
             </ul>
         </div>
     </div>
