第3回課題修正

--- a/kadai3_hasegawa/index.html
+++ b/kadai3_hasegawa/index.html
@@ -12,51 +12,60 @@
 <body>
 
     <div class="service">
-        <p>
         <h1>サービス</h1>
-        </p>
         <ul class="service-content">
-            <li class="service-content-img"><img src="./images/main_2.png" alt="サービス2">
+            <li class="service-content-img"><img src="./images/main_1.jpg" alt="サービス2">
                 <div class="service-content-text">
                     <div>
-                        <div class="service-title">
-                        </div>
                         <div class="service-title">
                             <h2>サービス1</h2>
                         </div>
                     </div>
-                    サービス1サービス1サービス1サービス1サービス1サービス1サービス1
+                    <p>
+                        サービス1サービス1サービス1サービス1サービス1サービス1サービス1
+                    </p>
                 </div>
             </li>
             <li class="service-content-img"><img src="./images/main_2.png" alt="サービス2">
                 <div class="service-content-text">
                     <div>
                         <div class="service-title">
-                        </div>
-                        <div class="service-title">
                             <h2>サービス2</h2>
                         </div>
                     </div>
-                    サービス2サービス2サービス2サービス2サービス2サービス2サービス2
+                    <p>
+                        サービス2サービス2サービス2サービス2サービス2サービス2サービス2
+                    </p>
                 </div>
             </li>
             <li class="service-content-img"><img src="./images/main_3.png" alt="サービス3">
                 <div class="service-content-text">
                     <div>
                         <div class="service-title">
-                        </div>
-                        <div class="service-title">
                             <h2>サービス3</h2>
                         </div>
                     </div>
-                    サービス3サービス3サービス3サービス3サービス3サービス3サービス3
+                    <p>
+                        サービス3サービス3サービス3サービス3サービス3サービス3サービス3
+                    </p>
                 </div>
             </li>
         </ul>
     </div>
 
-    背景のグレーの部分がこれでいいのかわかりません。<br>
-    無理矢理感が漂っていますが、ご指示お願いします。
+    <script>
+        let num = 0;
+        for (let i = 1; i <= 10; i++) {
+            num = num + i;
+        }
+        console.log(num);
+
+        if (num >= 20) {
+            console.log("20以上");
+        } else if (num <= 20) {
+            console.log("20未満");
+        }
+    </script>
 </body>
 
 </html>
