--- a/kadai3_hasegawa/index.html
+++ b/kadai3_hasegawa/index.html
@@ -56,13 +56,14 @@
     <script>
         let num = 0;
         for (let i = 1; i <= 10; i++) {
-            num = num + i;
+            // num = num + i;
+            num += i;
         }
         console.log(num);
 
         if (num >= 20) {
             console.log("20以上");
-        } else if (num <= 20) {
+        } else {
             console.log("20未満");
         }
     </script>
