--- a/kadai4_hasegawa/index.html
+++ b/kadai4_hasegawa/index.html
@@ -43,8 +43,8 @@
             足を運んでくれるお客さんには落ち着く空間とこだわりのコーヒーを提供したい。
         </p>
     </div>
-    <main class="content">
-        <section id="aboutus">
+    <main>
+        <section class="content" id="aboutus">
             <div class="aboutus_left">
                 <img src="./images/pc_about-100.jpg" alt="カフェの写真">
             </div>
@@ -58,94 +58,99 @@
                 </p>
             </div>
         </section>
-        <section id="menu">
+        <section class="content" id="menu">
             <h2><img src="./images/menu@2x.png" alt="MENU"></h2>
             <ul class="menu_list">
-                <li><img src="./images/pc_menu_drink-100.jpg" alt="Drink">
-                    <div>
+                <li>
+                    <div class="menu_img">
+                        <img src="./images/pc_menu_drink-100.jpg" alt="Drink">
+
                         <p class="menu_list_title">
                             Drink
                         </p>
-                        <p class="menu_list_text">
-                            ドリンクメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
-                        </p>
                     </div>
+                    <p class="menu_list_text">
+                        ドリンクメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
+                    </p>
                 </li>
-                <li><img src="./images/pc_menu_food-100.jpg" alt="Drink">
-                    <div>
+                <li>
+                    <div class="menu_img">
+                        <img src="./images/pc_menu_food-100.jpg" alt="Drink">
+
                         <p class="menu_list_title">
                             Food
                         </p>
-                        <p class="menu_list_text">
-                            フードメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
-                        </p>
                     </div>
+                    <p class="menu_list_text">
+                        フードメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
+                    </p>
                 </li>
-                <li><img src="./images/pc_menu_sweets-100.jpg" alt="Drink">
-                    <div>
+                <li>
+                    <div class="menu_img">
+                        <img src="./images/pc_menu_sweets-100.jpg" alt="Drink">
                         <p class="menu_list_title">
                             Sweets
                         </p>
-                        <p class="menu_list_text">
-                            スイーツメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
-                        </p>
+                    </div>
+                    <p class="menu_list_text">
+                        スイーツメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
+                    </p>
                     </div>
                 </li>
             </ul>
         </section>
-    </main>
-    <main class="content_gallary">
-        <section id="gallery">
-            <h2><img src="./images/gallery@2x.png" alt="MENU"></h2>
-            <ul class="gallery_list">
-                <li><img src="./images/pc_gallary_05-100.jpg" alt="Drink">
-                </li>
-                <li><img src="./images/pc_gallary_05-100.jpg" alt="Drink">
-                </li>
-                <li><img src="./images/pc_gallary_05-100.jpg" alt="Drink">
-                </li>
-                <li><img src="./images/pc_gallary_05-100.jpg" alt="Drink">
-                </li>
-                <li><img src="./images/pc_gallary_05-100.jpg" alt="Drink">
-                </li>
-            </ul>
+        <section class="content_large" id="gallery">
+            <div class="content_gallery">
+                <h2><img src="./images/gallery@2x.png" alt="MENU"></h2>
+                <ul class="gallery_list">
+                    <li><img src="./images/pc_gallary_05-100.jpg" alt="Drink">
+                    </li>
+                    <li><img src="./images/pc_gallary_04-100.jpg" alt="Drink">
+                    </li>
+                    <li><img src="./images/pc_gallary_03-100.jpg" alt="Drink">
+                    </li>
+                    <li><img src="./images/pc_gallary_02-100.jpg" alt="Drink">
+                    </li>
+                    <li><img src="./images/pc_gallary_01-100.jpg" alt="Drink">
+                    </li>
+                </ul>
+            </div>
         </section>
-    </main>
-    <main class="content">
-        <section id="event">
+        <section class="content" id="event">
             <h2><img src="./images/event@2x.png" alt="EVENT"></h2>
             <div class="event_list">
-                <p>2020.06.23<span>7月はイベント出店のため0/0お休みします</span></p>
-                <p>2020.03.15<span>春の新商品新発売。話題のあのブランドとコラボ</span></p>
-                <p>2020.02.06<span>コーヒーの日で30％OFFイベントを開催［3日間限定］</span></p>
+                <div>
+                    <p>2020.06.23<span>7月はイベント出店のため0/0お休みします</span></p>
+                    <p>2020.03.15<span>春の新商品新発売。話題のあのブランドとコラボ</span></p>
+                    <p>2020.02.06<span>コーヒーの日で30％OFFイベントを開催［3日間限定］</span></p>
+                </div>
+            </div>
+        </section>
+        <section class="content_large" id="access">
+            <div class="content_access">
+                <h2><img src="./images/access@2x.png" alt="ACCESS"></h2>
+                <div class="access_map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.089361037935!2d135.5020170753371!3d34.70292597291894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6eac54e727f%3A0x9e4f8f4047af9f24!2z44OQ44OK44OK44Ob44O844Or!5e0!3m2!1sja!2sjp!4v1743597194954!5m2!1sja!2sjp"
+                        width="100%" height="470" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </section>
     </main>
-    <main class="content_access">
-        <section id="access">
-            <h2><img src="./images/access@2x.png" alt="ACCESS"></h2>
-            <div class="access_map"><iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.089361037935!2d135.5020170753371!3d34.70292597291894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6eac54e727f%3A0x9e4f8f4047af9f24!2z44OQ44OK44OK44Ob44O844Or!5e0!3m2!1sja!2sjp!4v1743597194954!5m2!1sja!2sjp"
-                    width="100%" height="470" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-            </div>
-        </section>
-    </main>
-    <main class="info">
-        <section class="info_detail">
-            <div><img src="./images/design_cafe_logo_footer@2x.png" alt="DESIGN CAFE">
+    <footer class="info">
+        <div class="info_detail">
+            <div calss="info_detail_img"><img src="./images/design_cafe_logo_footer@2x.png" alt="DESIGN CAFE">
             </div>
             <div>OPEN 18:00 / CLOSE 24:00<br>
                 〒150-0022<br>
                 東京都渋谷区東京南123デザインビルB1<br>
                 MAIL：info@designcafe.tokyo
             </div>
+        </div>
+        <div class="copyright">© 2021 DESIGN CAFE</div>
+    </footer>
+    <div id="button"><a href="#header"><img src="./images/to_top@2x.png" alt="ページトップへ"></a></div>
 
-        </section>
-        <footer>© 2021 DESIGN CAFE</footer>
-        <div id="button"><a href="#header"><img src="./images/to_top@2x.png" alt="ページトップへ"></a></div>
-    </main>
 
 </body>
 
