--- a/kadai4_hasegawa/index.html
+++ b/kadai4_hasegawa/index.html
@@ -25,6 +25,7 @@
                     <li><a href="#aboutus">ABOUT US</a></li>
                     <li><a href="#menu">MENU</a></li>
                     <li><a href="#gallery">GALLERY</a></li>
+                    <li><a href="#event">EVENT</a></li>
                     <li><a href="#access">ACCESS</a></li>
                 </ul>
             </nav>
