--- a/kadai4_hasegawa/index.html
+++ b/kadai4_hasegawa/index.html
@@ -56,14 +56,8 @@
             1杯のコーヒーから。
         </p>
         <p class="copy_small_ja">
-            毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを入れ<br>
-            足を運んでくれるお客さんには落ち着く空間とこだわりのコーヒーを提供したい。
-        </p>
-        <p class="copy_small_ja_sp">
-            毎日を丁寧に大切に過ごしたい。<br>
-            だからこそ一杯一杯丁寧にコーヒーを入れ<br>
-            足を運んでくれるお客さんには落ち着く空間と<br>
-            こだわりのコーヒーを提供したい。
+            毎日を丁寧に大切に過ごしたい。<br class="sp_br">だからこそ一杯一杯丁寧にコーヒーを入れ<br>
+            足を運んでくれるお客さんには落ち着く空間と<br class="sp_br">こだわりのコーヒーを提供したい。
         </p>
     </div>
     <main>
@@ -146,9 +140,9 @@
             <h2><img src="./images/event@2x.png" alt="EVENT"></h2>
             <div class="event_list">
                 <div>
-                    <p>2020.06.23<span>7月はイベント出店のため0/0お休みします</span></p>
-                    <p>2020.03.15<span>春の新商品新発売。話題のあのブランドとコラボ</span></p>
-                    <p>2020.02.06<span>コーヒーの日で30％OFFイベントを開催［3日間限定］</span></p>
+                    <p>2020.06.23<br class="sp_br"><span>7月はイベント出店のため0/0お休みします</span></p>
+                    <p>2020.03.15<br class="sp_br"><span>春の新商品新発売。話題のあのブランドとコラボ</span></p>
+                    <p>2020.02.06<br class="sp_br"><span>コーヒーの日で30％OFFイベントを開催［3日間限定］</span></p>
                 </div>
             </div>
         </section>
