第4回課題SP修正

--- a/kadai4_hasegawa/index.html
+++ b/kadai4_hasegawa/index.html
@@ -64,7 +64,7 @@
         <section class="content" id="aboutus">
             <div class="aboutus_left">
                 <picture>
-                    <source srcset="images/about_us@2x-100.jpg" media="(max-width: 767px)">
+                    <source srcset="./images/about_us@2x-100.jpg" media="(max-width: 767px)">
                     <img src="./images/pc_about-100.jpg" alt="カフェの写真">
                 </picture>
             </div>
@@ -83,8 +83,10 @@
             <ul class="menu_list">
                 <li>
                     <div class="menu_img">
-                        <img src="./images/pc_menu_drink-100.jpg" alt="Drink">
-
+                        <picture>
+                            <source srcset="./images/drink_sp@2x-100.jpg" media="(max-width: 767px)">
+                            <img src="./images/pc_menu_drink-100.jpg" alt="Drink">
+                        </picture>
                         <p class="menu_list_title">
                             Drink
                         </p>
@@ -95,8 +97,10 @@
                 </li>
                 <li>
                     <div class="menu_img">
-                        <img src="./images/pc_menu_food-100.jpg" alt="Drink">
-
+                        <picture>
+                            <source srcset="./images/food_sp@2x-100.jpg" media="(max-width: 767px)">
+                            <img src="./images/pc_menu_food-100.jpg" alt="Food">
+                        </picture>
                         <p class="menu_list_title">
                             Food
                         </p>
@@ -107,7 +111,10 @@
                 </li>
                 <li>
                     <div class="menu_img">
-                        <img src="./images/pc_menu_sweets-100.jpg" alt="Drink">
+                        <picture>
+                            <source srcset="./images/cake_sp@2x-100.jpg" media="(max-width: 767px)">
+                            <img src="./images/pc_menu_sweets-100.jpg" alt="Sweets">
+                        </picture>
                         <p class="menu_list_title">
                             Sweets
                         </p>
