--- a/kadai4_hasegawa/index.html
+++ b/kadai4_hasegawa/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Cafe</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -17,6 +22,12 @@
                 <picture>
                     <source srcset="./images/sp_main_vs@2x-100.jpg" media="(max-width:767px)">
                     <img src="./images/pc_first-100.jpg" alt="店内の様子">
+                </picture>
+            </div>
+            <div>
+                <picture>
+                    <source srcset="./images/sp_main_vs_2@2x-100.jpg" media="(max-width:767px)">
+                    <img src="./images/slider_2.jpg" alt="店内の様子">
                 </picture>
             </div>
         </div>
@@ -140,6 +151,16 @@
                     </li>
                     <li><img src="./images/pc_gallary_01-100.jpg" alt="Drink">
                     </li>
+                    <li><img src="./images/pc_gallary_01-100.jpg" alt="Drink">
+                    </li>
+                    <li><img src="./images/pc_gallary_04-100.jpg" alt="Drink">
+                    </li>
+                    <li><img src="./images/pc_gallary_03-100.jpg" alt="Drink">
+                    </li>
+                    <li><img src="./images/pc_gallary_02-100.jpg" alt="Drink">
+                    </li>
+                    <li><img src="./images/pc_gallary_01-100.jpg" alt="Drink">
+                    </li>
                 </ul>
             </div>
         </section>
@@ -184,6 +205,29 @@
                 $('.sp_btn').toggleClass('open');
                 $('.sp_nav').fadeToggle();
             })
+            $('.header_slider').slick({
+                autoplay: true,
+                autoplaySpeed: 2000,
+                dots: true,
+                arrows: false,
+            });
+            $('.gallery_list').slick(
+                {
+                    slidesToShow: 5,     // ← ここで「5個表示」
+                    slidesToScroll: 1,   // ← 1つずつ動く（必要に応じて変更OK）
+                    infinite: true,      // 無限ループさせる（任意）
+                    arrows: true,        // ナビゲーション矢印
+                    dots: false,          // ドットナビを表示したいなら true に
+                    responsive: [
+                        {
+                            breakpoint: 767,       // 767px以下のとき（スマホサイズ）
+                            settings: {
+                                slidesToShow: 1,     // 1枚ずつ表示
+                            }
+                        }
+                    ]
+                }
+            );
 
         })
     </script>
