モーダルについて

--- a/kadai4_hasegawa/index.html
+++ b/kadai4_hasegawa/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <!-- モーダル -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- モーダル -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js" defer
+        type="text/javascript"></script>
 </head>
 
 <body>
@@ -141,25 +146,38 @@
             <div class="content_gallery">
                 <h2><img src="./images/gallery@2x.png" alt="MENU"></h2>
                 <ul class="gallery_list">
-                    <li><img src="./images/pc_gallary_05-100.jpg" alt="Drink">
+                    <li>
+                        <a href="./images/pc_gallary_05-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_05-100.jpg" alt="ギャラリー写真5"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_04-100.jpg" alt="Drink">
+                    <li>
+                        <a href="./images/pc_gallary_04-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_04-100.jpg" alt="ギャラリー写真4"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_03-100.jpg" alt="Drink">
+                    <li>
+                        <a href="./images/pc_gallary_03-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_03-100.jpg" alt="ギャラリー写真3"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_02-100.jpg" alt="Drink">
+                    <li><a href="./images/pc_gallary_02-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_02-100.jpg" alt="ギャラリー写真2"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_01-100.jpg" alt="Drink">
+                    <li><a href="./images/pc_gallary_01-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_01-100.jpg" alt="ギャラリー写真1"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_01-100.jpg" alt="Drink">
+                    <li><a href="./images/pc_gallary_05-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_05-100.jpg" alt="ギャラリー写真5"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_04-100.jpg" alt="Drink">
+                    <li><a href="./images/pc_gallary_04-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_04-100.jpg" alt="ギャラリー写真4"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_03-100.jpg" alt="Drink">
+                    <li><a href="./images/pc_gallary_03-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_03-100.jpg" alt="ギャラリー写真3"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_02-100.jpg" alt="Drink">
+                    <li><a href="./images/pc_gallary_02-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_02-100.jpg" alt="ギャラリー写真2"></a>
                     </li>
-                    <li><img src="./images/pc_gallary_01-100.jpg" alt="Drink">
+                    <li><a href="./images/pc_gallary_01-100.jpg" data-lightbox="group"><img
+                                src="./images/pc_gallary_01-100.jpg" alt="ギャラリー写真1"></a>
                     </li>
                 </ul>
             </div>
